Java 21 pipeline (#11672)
* Enable Java 21 in github test pipeline

* Move scala dependencies to root pom

* Move scala.version and scala.compat.version to default properties

* Run tests with corretto instead of temurin to simplify matrix

* Increase Mockito version to be able to use it in Java 21

* Add -Dnet.bytebuddy.experimental=true on tests

* Correctly add prioritize_bytebuffer: true to the matrix

* Use Spark 3.5.0 instead of 3.2.1 given that the former supports Java 21

* Go back to spark 3.2.1 instead of 3.5.0 but do not compile it with Java 21

* use prioritize_bytebuffer in Java 11

* Improve job names

* Run without byte buffer in Java 11 (LArray) and 17 (Unsafe buffers)

* Upgrade spark from 3.2 to 3.5

* Use skip_bytebuffer instead of prioritize_bytebuffer

* Run tests with Java 11, Java 21 and Java 21 without bytebuffers

* Read PINOT_OFFHEAP_SKIP_BYTEBUFFER env variable only once

* Add a codecov flag to indicate which buffers are used

* Change from corretto to temurin